Remove ReadOnly flag when mouseleave with touch

In this patch, we remove ReadOnly flag when mouseleave with touch in
EventHandler::handleMouseMoveOrLeaveEvent since we want to
updateHoverActiveState without hit test for this case.

BUG=678363

Review-Url: https://codereview.chromium.org/2734153003
Cr-Commit-Position: refs/heads/master@{#455647}

Former-commit-id: 7a06624223475946620e19af8322f7cf4ebd8dc1